added YYYMMDD date formatter, updated I18n strings for alert warnings, changed 'course year' to 'academic year' in course container collapsible div, more work on date out of range and overlap functions

--- a/web/application/language/ilios_strings_en_US.properties
+++ b/web/application/language/ilios_strings_en_US.properties
@@ -464,6 +464,11 @@ course_management.session.sort.alpha_desc=Alpha descending
 course_management.session.sort.date_asc=Date ascending
 course_management.session.sort.date_desc=Date descending
 #
+course_management.warning.date_out_of_academic_year_range1=You have chosen a
+course_management.warning.date_out_of_academic_year_range2=date that is out of range for the
+course_management.warning.date_out_of_academic_year_range3=academic year.
+course_management.warning.date_out_of_academic_year_range4=Please choose a date between
+course_management.warning.date_out_of_academic_year_range5=and
 course_management.warning.dirty_objective=You've made changes to the objective text which will be discarded.
 course_management.warning.independent_learning.no_cohorts=Your course should have at least one program cohort so that there might be student groups of which to choose.
 course_management.warning.independent_learning.no_instructors=The program cohorts associated to your course have no learner groups associated to them.
@@ -478,6 +483,10 @@ course_management.warning.published_course_save_as_draft=You are about to un-pub
 course_management.warning.published_session_save_as_draft=You are about to un-publish this session and revert it to draft mode. This will remove all current student access, as well as delete any group associations in CLE systems other than Ilios.
 course_management.warning.save_all_draft=This action will save all work in progress as DRAFT form
 course_management.warning.session_delete=Deleting a session deletes all objectives and offerings that are associated with it.
+course_management.warning.overlapping_academic_years_1=WARNING: The
+course_management.warning.overlapping_academic_years_2=you selected is included in the following academic years
+course_management.warning.overlapping_academic_years_3=You are currently setting this value for the
+course_management.warning.overlapping_academic_years_4=Please verify that your academic year selection is correct before saving...
 #
 course_management.add_course=Add New Course
 course_management.add_session=Add Session
