--- a/web/application/language/ilios_strings_xx.properties
+++ b/web/application/language/ilios_strings_xx.properties
@@ -463,6 +463,11 @@ course_management.session.sort.alpha_desc=X$X$X$X$
 course_management.session.sort.date_asc=X$X$X$X$
 course_management.session.sort.date_desc=X$X$X$X$
 #
+course_management.warning.date_out_of_academic_year_range1=X$X$X$X$
+course_management.warning.date_out_of_academic_year_range2=X$X$X$X$
+course_management.warning.date_out_of_academic_year_range3=X$X$X$X$
+course_management.warning.date_out_of_academic_year_range4=X$X$X$X$
+course_management.warning.date_out_of_academic_year_range5=X$X$X$X$
 course_management.warning.dirty_objective=X$X$X$X$
 course_management.warning.independent_learning.no_cohorts=X$X$X$X$
 course_management.warning.independent_learning.no_instructors=X$X$X$X$
@@ -478,6 +483,10 @@ course_management.warning.published_session_save_as_draft=X$X$X$X$
 
 course_management.warning.save_all_draft=X$X$X$X$
 course_management.warning.session_delete=X$X$X$X$
+course_management.warning.overlapping_academic_years_1=X$X$X$X$
+course_management.warning.overlapping_academic_years_2=X$X$X$X$
+course_management.warning.overlapping_academic_years_3=X$X$X$X$
+course_management.warning.overlapping_academic_years_4=X$X$X$X$
 #
 course_management.add_course=X$X$X$X$
 course_management.add_session=X$X$X$X$
