--- a/web/application/language/ilios_strings_xx.properties
+++ b/web/application/language/ilios_strings_xx.properties
@@ -487,6 +487,7 @@ course_management.warning.overlapping_academic_years_1=X$X$X$X$
 course_management.warning.overlapping_academic_years_2=X$X$X$X$
 course_management.warning.overlapping_academic_years_3=X$X$X$X$
 course_management.warning.overlapping_academic_years_4=X$X$X$X$
+course_management.warning.overlapping_academic_years_5=X$X$X$X$
 #
 course_management.add_course=X$X$X$X$
 course_management.add_session=X$X$X$X$
