rollover working, i18n text added for undefined academic year selection, still need to fix calendar exit

--- a/web/application/language/ilios_strings_en_US.properties
+++ b/web/application/language/ilios_strings_en_US.properties
@@ -448,6 +448,9 @@ course_management.rollover.warning.bad_dates=You have entered a start date which
 course_management.rollover.warning.start_date_dow_1=You have chosen a start date on a
 course_management.rollover.warning.start_date_dow_2=which is not the same day of the week
 course_management.rollover.warning.start_date_dow_3=as the original course's start date. These must match.
+course_management.rollover.warning.academic_year_undefined_1=This school does not have an academic year defined for
+course_management.rollover.warning.academic_year_undefined_2=You should configure a
+course_management.rollover.warning.academic_year_undefined_3=academic year for this school before selecting future course dates.
 #
 course_management.search.title=Please search for and select a course
 #
@@ -484,7 +487,7 @@ course_management.warning.published_session_save_as_draft=You are about to un-pu
 course_management.warning.save_all_draft=This action will save all work in progress as DRAFT form
 course_management.warning.session_delete=Deleting a session deletes all objectives and offerings that are associated with it.
 course_management.warning.overlapping_academic_years_1=WARNING: The
-course_management.warning.overlapping_academic_years_2=you selected is included in the following academic years
+course_management.warning.overlapping_academic_years_2=date you selected is included in the following academic years
 course_management.warning.overlapping_academic_years_3=You are currently setting this value for the
 course_management.warning.overlapping_academic_years_4=academic year
 course_management.warning.overlapping_academic_years_5=Please verify that your academic year and date selections are correct before saving...
