--- a/web/application/language/ilios_strings_xx.properties
+++ b/web/application/language/ilios_strings_xx.properties
@@ -447,6 +447,9 @@ course_management.rollover.warning.bad_dates=X$X$X$X$
 course_management.rollover.warning.start_date_dow_1=X$X$X$X$
 course_management.rollover.warning.start_date_dow_2=X$X$X$X$
 course_management.rollover.warning.start_date_dow_3=X$X$X$X$
+course_management.rollover.warning.academic_year_undefined_1=X$X$X$X$
+course_management.rollover.warning.academic_year_undefined_2=X$X$X$X$
+course_management.rollover.warning.academic_year_undefined_3=X$X$X$X$
 #
 course_management.search.title=X$X$X$X$
 #
